--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -15,6 +15,7 @@
             <a ui-sref="{{item.state}}">{{item.title}}</a>
         </li>
         <li ng-show="nav.isOrganizer()" ui-sref-active="active"><a ui-sref="volunteer">Volunteers</a></li>
+        <li ng-show="nav.isOrganizer()" ui-sref-active="active"><a ui-sref="upload">Upload</a></li>
         <li ng-show="nav.isAdmin()" ui-sref-active="active"><a ui-sref="admin">Admin</a></li>
       </ul>
 
