--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -14,6 +14,7 @@
         <li ng-repeat="item in nav.menu" ui-sref-active="active">
             <a ui-sref="{{item.state}}">{{item.title}}</a>
         </li>
+        <li ng-show="nav.isOrganizer()" ui-sref-active="active"><a ui-sref="job">Jobs</a></li>
         <li ng-show="nav.isOrganizer()" ui-sref-active="active"><a ui-sref="volunteer">Volunteers</a></li>
         <li ng-show="nav.isOrganizer()" ui-sref-active="active"><a ui-sref="upload">Upload</a></li>
         <li ng-show="nav.isAdmin()" ui-sref-active="active"><a ui-sref="admin">Admin</a></li>
