Updating HTML and CSS to all match

--- a/client/app/volunteer/volunteer.css
+++ b/client/app/volunteer/volunteer.css
@@ -1,6 +1,7 @@
-.container {
-  width: 70%;
-  min-width: 400px;
+.volunteer-container {
+  width: 60%;
+  margin: 0 auto;
+  min-width: 300px;
 }
 
 .form-group{
