--- a/client/app/volunteer/volunteer.css
+++ b/client/app/volunteer/volunteer.css
@@ -28,3 +28,38 @@
 .slot {
   padding: 8px;
 }
+
+.group-item {
+  display: block;
+  padding: 10px 15px;
+}
+
+a.group-item {
+  color: #555;
+}
+a.group-item .group-item-heading {
+  color: #333;
+}
+a.group-item:hover,
+a.group-item:focus {
+  text-decoration: none;
+  background-color: #f5f5f5;
+}
+a.group-item.active,
+a.group-item.active:hover,
+a.group-item.active:focus {
+  z-index: 2;
+  color: #fff;
+  background-color: #428bca;
+  border-color: #428bca;
+}
+a.group-item.active .group-item-heading,
+a.group-item.active:hover .group-item-heading,
+a.group-item.active:focus .group-item-heading {
+  color: inherit;
+}
+a.group-item.active .group-item-text,
+a.group-item.active:hover .group-item-text,
+a.group-item.active:focus .group-item-text {
+  color: #e1edf7;
+}
