--- a/client/app/schedule/schedule.css
+++ b/client/app/schedule/schedule.css
@@ -1,5 +1,17 @@
 .schedule-container {
-  width: 60%;
+  width: 80%;
   margin: 0 auto;
   min-width: 300px;
+}
+
+.col {
+  position: relative;
+  min-height: 1px;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.list-group-item-information {
+  color: #000;
+  background-color: #d9edf7;
 }
